[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/war/war.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0196078, 0.219608, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.32549, 0.231373, 0.137255, 1 )

[node name="War" type="Node2D"]
script = ExtResource( 1 )

[node name="DeckSpawnPoint" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="Panel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="MasterContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameContainer" type="GridContainer" parent="UI/MasterContainer"]
margin_right = 1024.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="ButtonContainer" type="HBoxContainer" parent="UI/MasterContainer"]
margin_top = 540.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonBG" type="Panel" parent="UI/MasterContainer/ButtonContainer"]
margin_right = 1024.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="DealButton" type="Button" parent="UI/MasterContainer/ButtonContainer/ButtonBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.25
margin_top = -17.0
margin_right = 53.25
margin_bottom = 17.0
text = "Deal"

[connection signal="pressed" from="UI/MasterContainer/ButtonContainer/ButtonBG/DealButton" to="." method="_on_DealButton_pressed"]
